--- a/style.css
+++ b/style.css
@@ -40,16 +40,16 @@ body{
 .hero-content{
   max-width: 600px;
 }
-.badge{
-  display: inline-block;
-  font-size: 12px;
-  letter-spacing: 2px;
-  background: linear-gradient(to bottom,#5bc0ff,transparent);
-  color: var(--text-light);
-  margin-bottom: 15px;
-  padding: 10px;
-  animation: scale-up-center 1s ease-out forwards;
-}
+/* .badge{ */
+/*   display: inline-block; */
+/*   font-size: 12px; */
+/*   letter-spacing: 2px; */
+/*   background: linear-gradient(to bottom,#5bc0ff,transparent); */
+/*   color: var(--text-light); */
+/*   margin-bottom: 15px; */
+/*   padding: 10px; */
+/*   animation: scale-up-center 1s ease-out forwards; */
+/* } */
 .hero-content h1{
   font-size: 38px;
   line-height: 1.3;
@@ -118,11 +118,11 @@ body.light-mode .hero-image {
   background: linear-gradient(180deg, var(--bg-dark), var(--bg-light));
   animation: fade-in 1s ease-out forwards;
 }
-body.light-mode .badge {
-  background: linear-gradient(to bottom, #3fa9f5, transparent);
-  color: var(--text-dark);
-  animation: scale-up-center 1s ease-out forwards;
-}
+/* body.light-mode .badge { */
+/*   background: linear-gradient(to bottom, #3fa9f5, transparent); */
+/*   color: var(--text-dark); */
+/*   animation: scale-up-center 1s ease-out forwards; */
+/* } */
 body.light-mode .hero-content p {
   color: #0b1c2d;
 }
