--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ body{
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin: 20px 20px;
+  margin: 10px 10px;
+  max-width: 100vw;
 }
 .hero-image{
   background: linear-gradient(180deg,#102a44,#0b1c2d);
@@ -40,16 +41,6 @@ body{
 .hero-content{
   max-width: 600px;
 }
-/* .badge{ */
-/*   display: inline-block; */
-/*   font-size: 12px; */
-/*   letter-spacing: 2px; */
-/*   background: linear-gradient(to bottom,#5bc0ff,transparent); */
-/*   color: var(--text-light); */
-/*   margin-bottom: 15px; */
-/*   padding: 10px; */
-/*   animation: scale-up-center 1s ease-out forwards; */
-/* } */
 .hero-content h1{
   font-size: 38px;
   line-height: 1.3;
@@ -63,18 +54,24 @@ body{
   line-height: 1.6;
   margin-bottom: 30px;
 }
-.stats{
-  display: flex;
-  gap: 40px;
-  margin-bottom: 30px;
+.parent {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    gap: 8px;
+    width: 100%;
 }
-.stat h3{
-  font-size: 28px;
-  color: #5bc0ff;
+.div1,.div2,.div3{
+  grid-row-start: 1;
+  border: 1px solid #b5c7d6;
+  padding: 20px 10px;
 }
-.stat span{
-  font-size: 14px;
-  color: #b5c7d6;
+.div4,.div5,.div6 {
+    grid-row-start: 2;
+    border: 1px solid #b5c7d6;
+    padding: 8px 5px;
+    display: flex;
+    justify-content: center;
 }
 .btn{
   display: inline-block;
@@ -118,11 +115,6 @@ body.light-mode .hero-image {
   background: linear-gradient(180deg, var(--bg-dark), var(--bg-light));
   animation: fade-in 1s ease-out forwards;
 }
-/* body.light-mode .badge { */
-/*   background: linear-gradient(to bottom, #3fa9f5, transparent); */
-/*   color: var(--text-dark); */
-/*   animation: scale-up-center 1s ease-out forwards; */
-/* } */
 body.light-mode .hero-content p {
   color: #0b1c2d;
 }
